--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask
-gunicorn
-tensorflow
-pandas
-numpy
-
-scikit-learn
+Flask==3.0.3
+gunicorn==22.0.0
+tensorflow==2.15.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.0
