--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask==3.0.3
 gunicorn==22.0.0
 tensorflow==2.20.0
 pandas>=2.0.0
-numpy==1.26.4
+numpy>=2.1.0  # Atau numpy>=1.26.4,<3.0.0
 scikit-learn==1.5.0
