--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,86 @@
-# Web Framework
+absl-py==2.3.1
+asttokens==3.0.0
+astunparse==1.6.3
+blinker==1.9.0
+cachetools==6.2.1
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.17
+decorator==5.2.1
+executing==2.2.1
 Flask==3.0.3
+flatbuffers==25.9.23
+fonttools==4.60.1
+gast==0.6.0
+google-auth==2.41.1
+google-auth-oauthlib==1.2.2
+google-pasta==0.2.0
+grpcio==1.75.1
 gunicorn==22.0.0
-
-# Machine Learning & Data Processing
-# Tensorflow dan dependensinya
-tensorflow==2.15.0 # Versi stabil yang lebih lama, sering digunakan untuk produksi
-# Catatan: Versi TensorFlow yang lebih baru mungkin memerlukan numpy yang lebih tinggi
-
-# Data Manipulation
-pandas==2.1.4 # Versi stabil yang diketahui bekerja dengan baik
-
-# Core Libraries (sesuaikan dengan kebutuhan tensorflow)
-numpy==1.24.3 # Versi yang sering digunakan dengan tensorflow 2.15.0 dan scikit-learn lama
-# Jika tensorflow 2.15.0 tetap menyebabkan masalah, coba numpy yang lebih baru tapi tetap stabil, misalnya 1.26.4
-
-# Machine Learning (pastikan kompatibel dengan numpy dan tensorflow)
-scikit-learn==1.3.2 # Versi yang stabil dan sering digunakan
-
-# Catatan Penting:
-# - Versi-versi ini ditujukan untuk Python 3.11 atau 3.12.
-# - Jika Anda menggunakan Python 3.13, Anda mungkin perlu mencari versi yang lebih baru atau menghadapi tantangan kompatibilitas.
-# - Jika tensorflow==2.15.0 masih menyebabkan konflik dengan numpy yang dipilih, Anda mungkin perlu mencoba versi tensorflow yang lebih tua lagi (seperti 2.14.x) atau numpy yang lebih baru (misalnya 1.26.4) dan menguji kompatibilitasnya.
+h5py==3.15.1
+idna==3.11
+ipykernel==7.0.1
+ipython==9.6.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+keras==2.15.0
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.9
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+matplotlib-inline==0.1.7
+ml-dtypes==0.2.0
+nest-asyncio==1.6.0
+numpy==1.26.4
+oauthlib==3.3.1
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.1.4
+parso==0.8.5
+pillow==12.0.0
+platformdirs==4.5.0
+prompt_toolkit==3.0.52
+protobuf==4.25.8
+psutil==7.1.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+Pygments==2.19.2
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+requests==2.32.5
+requests-oauthlib==2.0.0
+rsa==4.9.1
+scikit-learn==1.3.2
+scipy==1.15.3
+six==1.17.0
+stack-data==0.6.3
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tornado==6.5.2
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.14
+Werkzeug==3.1.3
+wrapt==1.14.2
